--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-  <title>Portfolio Marta Guisado</title>
+  <title>Recetas fáciles y sanas</title>
 </head>
 
 <body>
@@ -24,25 +24,38 @@
 </header>
 
 <aside class="sidebar">
+
+<br>
+      <img src="WhatsApp Image 2025-09-24 at 10.36.03.jpeg" alt="Frase del che Jean-François Trap" class="foto-chef">
+
+    <br>
       <h3>Intereses</h3>
-      <p>
-        Para mí la cocina es una forma más de desatar la creatividad y trabajar la paciencia y la atención.
+      <p>Para mí la cocina es una forma más de desatar la creatividad y trabajar la paciencia y la atención.
         ¿Nunca te ha pasado que creías que una receta iba a salir mal y al final fue todo un éxito?
         Tú también has notado ese subidón y sabes de qué hablo <span>😏</span>
         Con las recetas que encontrarás aquí tendrás el éxito asegurado.
       </p><br>
 
-      <h3>Las claves</h3>
+      <h3>Las claves</h3><br>
       <ul style="margin-left:1rem; list-style:square;">
         <li>Fáciles</li>
         <li>Apetecibles</li>
         <li>Sin complicaciones</li>
       </ul><br>
 
-      <h3>¿Te animas?</h3>
+      <h3>¿Te animas?</h3><br>
       <p>
         Si estás list@ para empezar esta aventura culinaria, ¡aquí encontrarás todo lo que necesitas!
       </p>
+
+      <br>
+      <br>
+      <h3>Plantilla de recetas</h3>
+      <p>
+        Aquí te dejo una plantilla descargable para que puedas organizar tus recetas favoritas.
+      </p>
+
+      <a href="recetas.zip" download class="btn-descarga">📥 Descargar plantilla</a>
     </aside>
 
  <main>
@@ -69,21 +82,44 @@
         </div>
       </section>
 
-<section>
+      <h2 class="mas-populares" id="ensaladas-clas">Más populares</h2>
+      
+
+<section class="tarjeta-recetas" id="ensaladas" aria-labelledby="ensaladas-clas">
 <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="Ensalada lentejas.jpeg" class="card-img-top" alt="Ensalada de lentejas con pulpo">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Ensalada de lentejas y pulpo</h5>
+    <p class="card-text">Una alternativa fresca para comer legumbres en los días más calurosos</p>
+    <a href="#" class="boton-receta">Ver receta</a>
   </div>
 </div>
 
-</section>
+<div class="card" style="width: 18rem;">
+  <img src="Tortilla castellana.jpeg" class="card-img-top" alt="Tortilla castellana">
+  <div class="card-body">
+    <h5 class="card-title">Tortilla de patatas castellana</h5>
+    <p class="card-text">Una versión diferente de nuestra clásica tortilla de patatas</p>
+    <a href="#" class="boton-receta">Ver receta</a>
+  </div>
+</div>
 
-  </main>
+<div class="card" style="width: 18rem;">
+  <img src="Ensalada aguacate y salmón.jpeg" class="card-img-top" alt="Ensalada aguacate y salmón">
+  <div class="card-body">
+    <h5 class="card-title">Ensalada de aguacate y salmón</h5>
+    <p class="card-text">Una combinación deliciosa y saludable, perfecta para cualquier ocasión</p>
+    <a href="#" class="boton-receta">Ver receta</a>
+  </div>
+</div>
+</section>
+<a href="formulario.html" class="btn contacta">Contáctame</a>
+</main>
+
+
+
 <footer>
-        © 2025 Marta Guisado · <a href="#top" style="color:#F0FFFF;">Volver arriba</a
+        © 2025 Marta Guisado · <a href="#top" style="color:#F0FFFF;">Volver arriba</a>
 </footer>
 </body>
 </html>
